--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.4",
     "@nestjs/swagger": "^7.3.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/websockets": "^10.3.4",
     "@types/bcrypt": "^5.0.2",
     "@types/lodash": "^4.17.0",
     "@types/multer": "^1.4.11",
