--- a/.github/workflows/illjaler-ci.yaml
+++ b/.github/workflows/illjaler-ci.yaml
@@ -15,11 +15,11 @@ jobs:
         node-version: [16, 18, 20]
     steps:
       - name: Get Code
-        uses: action/checkout@v3 # github action의 checkout액션을 사용하여 현재 프로젝트의 코드를 가져옴. 레포지토리는 action/checkout
+        uses: actions/checkout@v3 # github action의 checkout액션을 사용하여 현재 프로젝트의 코드를 가져옴. 레포지토리는 action/checkout
         with:
           token: ${{ secrets.YOUR_CUSTOM_GITHUB_TOKEN }}
       - name: Install NodeJs
-        uses: action/setup-node@v3 # node의 버전을 설정함. 레포지토리는 action/setup-node
+        uses: actions/setup-node@v3 # node의 버전을 설정함. 레포지토리는 action/setup-node
         with:
           node-version: ${{ matrix.node-version }} # 버전은 matrix에서 설정한 3가지 버전이 병렬적으로 실행된다.
       - name: Cache dependencies
@@ -41,9 +41,9 @@ jobs:
         node-version: [16, 18, 20]
     steps:
       - name: Get Code
-        uses: action/checkout@v3
+        uses: actions/checkout@v3
       - name: Install NodeJs
-        uses: action/setup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
       - name: Cache dependencies
@@ -65,9 +65,9 @@ jobs:
         node-version: [16, 18, 20]
     steps:
       - name: Get Code
-        uses: action/checkout@v3
+        uses: actions/checkout@v3
       - name: Install NodeJs
-        uses: action/setup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
       - name: Cache dependencies
