--- a/.github/workflows/illjaler-ci.yaml
+++ b/.github/workflows/illjaler-ci.yaml
@@ -30,7 +30,7 @@ jobs:
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }} # cache Key 설정. deps-node-modules-로 시작하는 문자열을 기반으로 package-lock.json 파일의 해시값을 계산하여 캐시 키로 사용. 이렇게 함으로써 package-lock.json 파일이 변경될 때마다 새로운 캐시 항목이 생성되어 새로운 의존성이 설치됨.
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true' # steps: 현재 단계 컨텍스트에 접근, cache:Cache dependencies의 고유 id, outputs.cache-hit: 출력값을 가져와서 true인지 아닌지 판별, true가 아니라면 package-lock.json 파일을 통해 정확한 종속성을 설치
-        run: npm ci
+        run: npm ci --no-fund
       - name: Lint Code
         run: npm run lint
   test:
