--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -8,6 +8,8 @@
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:react/all",
+    "eslint:all",
     "prettier"
   ],
   "parser": "@typescript-eslint/parser",
