--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -5,11 +5,11 @@
     "jest": true
   },
   "extends": [
+    "eslint:all",
+    "plugin:react/all",
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:react/all",
-    "eslint:all",
     "prettier"
   ],
   "parser": "@typescript-eslint/parser",
@@ -21,7 +21,7 @@
     "sourceType": "module"
   },
   "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
-  "rules": {},
+  "rules": { "react/jsx-uses-react": "error", "react/jsx-uses-vars": "error" },
   "settings": {
     "import/resolver": {
       "typescript": {}
