--- a/.github/workflows/illjaler-ci.yaml
+++ b/.github/workflows/illjaler-ci.yaml
@@ -11,34 +11,8 @@ on:
       - dev
       - board
 jobs:
-  test:
-    needs: lint
-    runs-on: ubuntu-latest #우분투 환경에서 작업실행
-    strategy:
-      matrix:
-        node-version: [16, 18, 20]
-    steps:
-      - name: Get Code
-        uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.YOUR_CUSTOM_GITHUB_TOKEN }}
-      - name: Install NodeJs
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Cache dependencies
-        id: cache
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
-      - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: npm ci --no-fund
-      - name: Test code
-        run: npm run test
   build:
-    needs: test
+    # needs: test
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -70,7 +44,34 @@ jobs:
     steps:
       - name: Deploying
         run: echo 'Deploying...'
+  test:
+    needs: deploy
+    runs-on: ubuntu-latest #우분투 환경에서 작업실행
+    strategy:
+      matrix:
+        node-version: [16, 18, 20]
+    steps:
+      - name: Get Code
+        uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.YOUR_CUSTOM_GITHUB_TOKEN }}
+      - name: Install NodeJs
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Cache dependencies
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: npm ci --no-fund
+      - name: Test code
+        run: npm run test
   lint:
+    needs: test
     runs-on: ubuntu-latest #우분투 환경에서 작업실행
     strategy:
       matrix:
