--- a/.github/workflows/illjaler-ci.yaml
+++ b/.github/workflows/illjaler-ci.yaml
@@ -4,12 +4,10 @@ on:
   push: # push이벤트가 발생하면서 브랜치가 main일 경우와,
     branches:
       - main
-      - cicd
   pull_request: # pull_request이벤트가 발생하면서 브랜치가 main | dev 인 경우에 workflow가 실행.
     branches:
       - main
       - dev
-      - board
 jobs:
   build:
     runs-on: ubuntu-latest #우분투 환경에서 작업실행
@@ -62,7 +60,7 @@ jobs:
       - name: Test code
         run: npm run test
   deploy:
-    needs: build
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Deploying
