--- a/.github/workflows/illjaler-ci.yaml
+++ b/.github/workflows/illjaler-ci.yaml
@@ -77,6 +77,7 @@ jobs:
             cd /home/ubuntu/effi-worker
             git pull origin dev
             pm2 kill
+            npm install
             npm ci
             npm run build
             pm2 start dist/main.js
